--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,19 +53,15 @@ flutter_native_splash:
   android: true
   ios: true
 
-  color: "#D64151"
-  image: assets/images/splashscreen.png
-  branding: assets/images/brandimage.png
-
-  branding_bottom_padding_ios: 35
+  color: "#EFCF7F"
+  image: assets/images/circularsplashscreen.png
 
   color_dark: "#332828"
 
   android_12:
-    color: "#D64151"
+    color: "#EFCF7F"
     color_dark: "#332828"
-    image: assets/images/android12splash.png
-    branding: assets/images/brandimage.png
+    image: assets/images/circularandroid12splashscreen.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
